--- a/PredictionAssignment.Rmd
+++ b/PredictionAssignment.Rmd
@@ -2,9 +2,7 @@
 title: "Weight Lifting Exercise Prediction with Human Activity Recognition Data"
 author: "Red Chan"
 date: "June 3, 2016"
-output:
-  md_document:
-    variant: markdown_github
+output: html_document
 ---
 
 ## Introduction
